2008-12-02  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/component/producers/soundcard/wizard_gtk.py:
	Block the Forward button when the check fails.
	Fixes #1207

2008-12-01  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/producers/firewire/wizard.glade:
	* flumotion/component/producers/firewire/wizard_gtk.py:
	Added a combo that lists the available firewire cameras on the worker,
	thus the user can choose one of them by its name.
	* flumotion/worker/checks/gst010.py:
	Modified to reflect the listing and selection of a camera by its guid.
	Reformulation of some error messages when the device is not there
	and/or it cannot be loaded.
	Fixes #1183
	Fixes #1063

2008-11-28  Thomas Vander Stichele  <thomas at apestaart dot org>

	* data/upgrade-to-0.5.3.xsl:
	  Fix selection of nodes to fix for rate->samplerate to only apply
	  for audiotest-producer and soundcard-producer.

2008-11-27  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/common/common.py:
	Added year 2008 to the flumotion copyright message (--version)

2008-11-26  Sebastien Merle  <sebastien@fluendo.com>

	* flumotion/component/misc/httpserver/httpfile.py:
	Fixed a bug in http-server when no request modifier are specified.

2008-11-26  Sebastien Merle  <sebastien@fluendo.com>

	* flumotion/component/consumers/httpstreamer/resources.py:
	Fixed a bug when no plug are specified.

2008-11-26  Sebastien Merle  <sebastien@fluendo.com>

	* flumotion/component/plugs/requestmodifier.py:
	* flumotion/component/plugs/requestmodifier.py (added):
	Added the new plug module forgoten in the last commit.

2008-11-26  Sebastien Merle  <sebastien@fluendo.com>

	reviewed by: Arek,Zaheer

	* flumotion/component/consumers/httpstreamer/httpstreamer.xml:
	* flumotion/component/consumers/httpstreamer/resources.py:
	* flumotion/component/misc/httpserver/httpfile.py: